--- a/index-with-animation.html
+++ b/index-with-animation.html
@@ -329,7 +329,7 @@
               <a href="#">
                 <figure
                   class="image is-2by1 foto-item"
-                  style="background-image: url(../wed_inv/image/f.jpg); "
+                  style="background-image: url(../image/f.jpg); "
                 ></figure>
               </a>
             </div>
@@ -337,7 +337,7 @@
               <a href="#">
                 <figure
                   class="image is-2by1 foto-item"
-                  style="background-image: url(../wed_inv/image/g.jpg); "
+                  style="background-image: url(../image/g.jpg); "
                 ></figure>
               </a>
             </div>
