--- a/index-with-animation.html
+++ b/index-with-animation.html
@@ -288,7 +288,7 @@
               <a href="#">
                 <figure
                   class="image is-2by1 foto-item"
-                  style="background-image: url(../wed_inv/image/a.jpg); "
+                  style="background-image: url(../image/a.jpg); "
                 ></figure>
 				
               </a>
@@ -297,7 +297,7 @@
               <a href="#">
                 <figure
                   class="image is-2by1 foto-item"
-                  style="background-image: url(../wed_inv/image/b.jpg); "
+                  style="background-image: url(../image/b.jpg); "
                 ></figure>
               </a>
             </div>
@@ -305,7 +305,7 @@
               <a href="#">
                 <figure
                   class="image is-2by1 foto-item"
-                  style="background-image: url(../wed_inv/image/c.jpg); "
+                  style="background-image: url(../image/c.jpg); "
                 ></figure>
               </a>
             </div>
@@ -313,7 +313,7 @@
               <a href="#">
                 <figure
                   class="image is-2by1 foto-item"
-                  style="background-image: url(../wed_inv/image/d.jpg); "
+                  style="background-image: url(../image/d.jpg); "
                 ></figure>
               </a>
             </div>
@@ -321,7 +321,7 @@
               <a href="#">
                 <figure
                   class="image is-2by1 foto-item"
-                  style="background-image: url(../wed_inv/image/e.jpg); "
+                  style="background-image: url(../image/e.jpg); "
                 ></figure>
               </a>
             </div>
@@ -345,7 +345,7 @@
               <a href="#">
                 <figure
                   class="image is-2by1 foto-item"
-                  style="background-image: url(../wed_inv/image/h.jpg); "
+                  style="background-image: url(../image/h.jpg); "
                 ></figure>
               </a>
             </div>
