--- a/index-with-animation.html
+++ b/index-with-animation.html
@@ -288,7 +288,7 @@
               <a href="#">
                 <figure
                   class="image is-2by1 foto-item"
-                  style="background-image: url(../image/a.jpg); "
+                  style="background-image: url(../image/a.png); "
                 ></figure>
 				
               </a>
